--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "axios": "0.21.0",
     "native-base": "2.13.14",
     "react": "16.13.1",
     "react-native": "0.63.3"
